--- a/css/stilos.css
+++ b/css/stilos.css
@@ -145,4 +145,157 @@ select{
         font-weight: 600;
        
 }
+  /*RESPONSIVIDADE:*/
+  @media(min-width:200px) and (max-width:575.9px){
+   body h1{
+    font-size: 2rem;
+   }
   
+    input,select{
+      width:20.5%;
+      font-size: smaller;
+      height: 30px;
+      
+  }
+  label{
+    font-size:90%;
+  }
+ 
+  
+  div#formulario{
+     justify-content: center;       
+      width:100%;
+      background-color: rgba(255, 255, 255, 0.808);
+    }
+    form{
+      width:100%;
+      
+    }
+
+    main{
+        display: flex;
+        flex-direction:column; 
+    }
+    div#tabela{
+      justify-content: center;
+      width:100%;
+    }
+    td{
+      font-size:8px;
+   }
+
+  }
+  @media(min-width:576px) and (max-width:767.9px){
+    body h1{
+      font-size: 2.5rem;
+     }
+
+    input,select{
+      width:23.5%;
+      font-size: smaller;
+      
+  }
+  label{
+    font-size:90%;
+  }
+ 
+  
+  div#formulario{
+     justify-content: center;       
+      width:100%;
+    }
+    form{
+      width:100%;
+      
+    }
+    main{
+        display: flex;
+        flex-direction:column; 
+    }
+    div#tabela{
+      justify-content: center;
+      width:100%;
+    }
+    td{
+      font-size:11px;
+   }
+  }
+  @media(min-width:768px) and (max-width:991.9px){
+    body h1{
+      font-size: 3rem;
+     }
+    input{
+        width:100%;
+        height: 2px;
+        font-size: 13x;
+    }
+    label{
+      font-size:90%;
+    }
+    main{
+        display: flex;
+        flex-direction: column;
+    }
+    div#tabela{
+        justify-content: center;
+        width:100%;
+      }
+      div#formulario{
+        justify-content: right;
+        width:30%;
+      }
+    
+    table, tbody{
+        display: block; 
+        justify-content: center;
+    }
+    td{
+        font-size:12px;
+     }
+      
+  }
+
+  @media(min-width:992px) and (max-width:1200.9px){
+        input{
+            width:100%;
+        }
+        label{
+          font-size:100%;
+        }
+        main{
+            display: flex;
+        }
+        div#tabela{
+          
+            width:70%;
+          }
+          div#formulario{
+           justify-content: right;
+            width:30%;
+          }
+        
+        table, tbody{
+            display: block; 
+            justify-content: center;
+        }
+        td{
+            font-size:15px;
+         }
+
+  }
+  @media(min-width:1201px) and (max-width:1400px){
+    
+    table, tbody{
+        display: block; 
+        justify-content: center;
+    }
+    div#formulario{
+      justify-content: right;
+       width:30%;
+     }
+    
+   td{
+    font-size:18px;
+   }
+  
+  }
